# roxy-socks

./: .gitignore  README.md
.github/workflows/: release.yml
src/: Cargo.toml
src/examples/: config.yml
src/src/: buffered_request.rs  config.rs  file_watcher.rs  logging.rs  main.rs  process.rs  proxy.rs  rules.rs  shared_config.rs
test/: CMakeLists.txt  config_model.py  conftest.py  pyproject.toml  test_config.py  test_roxy.py
