[project]
name = "roxy-socks-tests"
version = "0.1.0"
description = "Tests for roxy-socks"
requires-python = ">=3.12"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "docker==7.1.0",
    "pytest==7.4.0",
    "pytest-asyncio==0.21.1",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test_*.py"
python_functions = "test_*"
